# Lab-Leaderboard

./: .pre-commit-config.yaml  README.md  pyproject.toml
lab_leaderboard/: README.md  leaderboard.py
tests/: test_leaderboard.py
